--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="referrer" content="never" />
-    <title>Vue.js Poster Shop</title>
+    <title>Vue.js Poster Shop by JMO</title>
     <link rel="icon" href="public/favicon.ico" type="image/x-icon">
 
     <!-- Fonts -->
