--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
     </div>
     <div class="main">
         <div class="products">
-            <p>Products go here.</p>
+            <div v-for="product in products" class="product" v-key="product.id">
+              <h4 class="product-title">
+                {{ product.title }}
+              </h4>
+              <button type="button" name="button" v-on:click="addToCart" class="add-to-cart btn">Add to cart</button>
+            </div>
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
             <div>
-                No items in the cart.
+                Total: {{total}}
             </div>
         </div>
     </div>
@@ -33,6 +38,7 @@
 
 <!-- Scripts -->
 <script src="/reload/reload.js"></script>
+<script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
